@@ -268,6 +268,12 @@
                                 </configuration>
                             </execution>
                         </executions>
+                        <configuration>
+                            <trimStackTrace>false</trimStackTrace>
+                            <reuseForks>true</reuseForks>
+                            <forkCount>1</forkCount>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.springframework.boot</groupId>
